--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     compile 'cn.bmob.android:bmob-push:0.8'
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    compile 'com.github.orhanobut:hawk:1.23'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
