--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     compile 'com.github.orhanobut:hawk:1.23'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
+    compile 'com.github.lovetuzitong:MultiImageSelector:1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
