发送文字和图片

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
             android:windowSoftInputMode="adjustPan|stateHidden"/>
 
         <activity
+            android:name=".activity.PostActivity"
+            android:label="@string/post"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+
+        <activity
             android:configChanges="orientation|screenSize"
             android:name="me.nereo.multi_image_selector.MultiImageSelectorActivity" />
 
