optimize image load and fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
 
         <activity
             android:name=".activity.ImageActivity"
-            android:label="@string/image"/>
+            android:label="@string/image"
+            android:process=":picture"/>
 
         <activity
             android:name="cn.bmob.v3.update.UpdateDialogActivity"
