--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
 
         <activity
             android:name=".activity.ImageActivity"
+            android:theme="@style/AppTheme.Translucent"
             android:label="@string/image"
             android:process=":picture"/>
 
