设置键盘的两种写法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,7 +82,8 @@
 
         <activity
             android:name=".activity.CommentActivity"
-            android:label="@string/comment_list"/>
+            android:label="@string/comment_list"
+            android:windowSoftInputMode="adjustPan"/>
 
     </application>
 
