新增我的消息模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,8 +81,10 @@
 
         <activity
             android:name=".activity.CommentActivity"
-            android:label="@string/comment_list"
-            android:windowSoftInputMode="adjustPan"/>
+            android:label="@string/comment_list"/>
+
+        <activity android:name=".activity.PersonalPostActivity"
+            android:label="@string/personal_post"/>
 
     </application>
 
