优化键盘弹出问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,8 @@
 
         <activity
             android:name=".activity.CommentActivity"
-            android:label="@string/comment_list"/>
+            android:label="@string/comment_list"
+            android:windowSoftInputMode="stateHidden"/>
 
         <activity android:name=".activity.PersonalPostActivity"
             android:label="@string/personal_post"/>
