--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
     <meta-data android:value="Channel ID" android:name="BMOB_CHANNEL"/>
 
     <application
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:replace="android:label"
         android:name=".others.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
