--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
 
     //**兼容Android6.0系统所需，如果这句话报错，可将其导入到libs文件夹下面**
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "zhulei.com.stone"
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion 21
+        targetSdkVersion 26
         versionCode 100004
         versionName "1.0.4"
     }
@@ -22,32 +22,35 @@ android {
     }
 }
 
-apply plugin: 'com.neenbedankt.android-apt'
-
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     //3.4.7依赖，其他诸如`org.apache.http.legacy`,如果你需要兼容Android6.0可自行添加
-    compile 'cn.bmob.android:bmob-sdk:3.4.7-aar'
+    implementation 'cn.bmob.android:bmob-sdk:3.6.2'
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
-    compile 'cn.bmob.android:http-legacy:1.0'
+    implementation 'cn.bmob.android:http-legacy:1.0'
     //bmob-push：Bmob的推送包
-    compile 'cn.bmob.android:bmob-push:0.8'
-    compile 'com.jakewharton:butterknife:8.0.1'
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
-    compile 'com.github.orhanobut:hawk:1.23'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.afollestad.material-dialogs:core:0.8.5.9'
-    compile 'com.github.lovetuzitong:MultiImageSelector:1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.0-RC1'
-    compile 'top.zibin:Luban:1.0.5'
+    implementation 'cn.bmob.android:bmob-push:0.8'
+    implementation ('com.jakewharton:butterknife:8.8.1'){
+        exclude group: 'com.android.support'
+    }
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation ('com.github.orhanobut:hawk:1.23'){
+        exclude group: 'com.google.code.gson'
+    }
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation ('com.afollestad.material-dialogs:core:0.9.0.1'){
+        exclude group: 'com.android.support'
+    }
+    implementation 'com.github.lovetuzitong:MultiImageSelector:1.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+//    implementation 'io.reactivex:rxandroid:1.2.1'
+//    implementation 'io.reactivex:rxjava:1.1.6'
+//    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'top.zibin:Luban:1.0.5'
 }
