--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,18 +24,21 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':navigationtabbar')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation ('com.jakewharton:butterknife:8.8.1'){
+    implementation 'me.yokeyword:fragmentation:1.3.5'
+
+    implementation('com.jakewharton:butterknife:8.8.1') {
         exclude group: 'com.android.support'
     }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation ('com.github.orhanobut:hawk:1.23'){
+    implementation('com.github.orhanobut:hawk:1.23') {
         exclude group: 'com.google.code.gson'
     }
     implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation ('com.afollestad.material-dialogs:core:0.9.0.1'){
+    implementation('com.afollestad.material-dialogs:core:0.9.0.1') {
         exclude group: 'com.android.support'
     }
     implementation 'com.github.lovetuzitong:MultiImageSelector:1.2'
