--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         xmlns:tools="http://schemas.android.com/tools"
         tools:replace="android:label"
-        android:name=".others.BaseApplication"
+        android:name=".others.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app"
@@ -15,15 +15,15 @@
         android:theme="@style/AppTheme.NoActionBar">
 
         <activity
-            android:name=".ui.activity.MainActivity"
-            android:label="@string/app"
-            android:theme="@style/AppTheme.NoActionBar.Main">
+            android:name=".ui.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.activity.MainActivity"/>
 
         <activity
             android:name=".ui.activity.LoginActivity"
