--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,12 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'me.yokeyword:fragmentation:1.3.5'
 
+    implementation 'pub.devrel:easypermissions:1.0.1'
     implementation('com.jakewharton:butterknife:8.8.1') {
         exclude group: 'com.android.support'
     }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation('com.github.orhanobut:hawk:1.23') {
-        exclude group: 'com.google.code.gson'
-    }
+    implementation 'com.orhanobut:hawk:2.0.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation('com.afollestad.material-dialogs:core:0.9.0.1') {
         exclude group: 'com.android.support'
